[package]
name = "chat-tty"
version = "0.3.3"
edition = "2021"
authors = ["Sean Aye <hello@seanaye.ca>"]
description = "A command-line chatbot for ChatGPT that supports streaming tokens and history"
homepage = "https://github.com/seanaye/chat-tty"
repository = "https://github.com/seanaye/chat-tty"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["chat", "gpt", "repl", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
directories = "5.0.0"
eventsource-stream = "0.2.3"
futures = "0.3.28"
reqwest = {version = "0.11.16", features = ["json", "stream"] }
rustyline = "11.0.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
